Thu Nov  5 11:32:07 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
        * ace/os_include/os_signal.h:
          Use ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES instead of
          ACE_HAS_LYNXOS50_SIGNALS.

Wed Nov  4 20:57:08 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/MakeProjectCreator/config/global.features:

          Set notify_monitor_control default value be 0.

Wed Nov  4 17:50:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Queue_Test.cpp:
          Improved portability

Wed Nov  4 14:51:00 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Bug_3758_Regression_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Moved regression test for 3758 to its own file.

Wed Nov  4 11:39:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/index.html:
          Updated description for DDS4CCM documentation

Wed Nov  4 00:07:49 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (resume_handler_i): If asked to resume a
          handler without any bits currently set, just note the handler has
          been resumed, don't fail it. Prevents orphaned handle if a
          auto-suspended handler's callback clears the lone bit set.

Mon Nov  2 13:45:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/RW_Process_Mutex.h:
        * ace/Default_Constants.h:
          Added ACE_DEFAULT_RW_PROCESS_MUTEX_PERMS with which the end user
          can override the default permissions

        * ace/Addr.inl:
        * ace/MMAP_Memory_Pool.cpp:
          Doxygen changes

Mon Nov  2 08:52:05 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Enhanced strsignal test to test with negative signal numbers.

Mon Nov  2 08:40:08 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Signal_Test on FreeBSD.

Mon Nov  2 08:36:24 UTC 2009  Olli Savia  <ops@iki.fi>
